syntax = "proto3";

option csharp_namespace = "NewLake.Core.GrpcProto";

service NewLakeReceiverService{
	rpc SendBulkMessage (InfoMessage) returns (ReturnMessage);
}

message ReturnMessage{
	string infoMessage=1;
}

message InfoMessage{
	int32 messageId=1;
	string messageDate=2;
}
